preprare for publish

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "plume-ui",
   "description": "plume ui framework",
   "version": "0.0.1",
-  "author": "yo7 <bloom6445@gmail.com>",
+  "author": "plume-ui team",
   "main": "dist/index.js",
+  "style": "dist/index.css",
   "types": "dist/index.d.ts",
   "private": true,
   "repository": "https://github.com/Japan-Venture-Research/plume-ui",
