--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@emotion/core": "^10.0.15",
     "@emotion/styled": "^10.0.15",
     "@types/classnames": "^2.2.9",
+    "@types/jest": "^24.0.18",
     "@types/react": "^16.9.1",
     "@types/react-dom": "^16.8.5",
     "autoprefixer": "^9.6.1",
     "css-loader": "^3.2.0",
     "docz": "^1.2.0",
     "docz-theme-default": "^1.2.0",
+    "jest": "^24.9.0",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
@@ -29,6 +31,7 @@
     "rimraf": "^3.0.0",
     "sass-loader": "^7.2.0",
     "style-loader": "^1.0.0",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.5.3"
   },
   "peerDependencies": {
@@ -46,6 +49,7 @@
     "clean": "rimraf dist && mkdir -p dist",
     "fmt": "prettier --write 'src/**/*{ts,tsx,scss}'",
     "lint": "prettier --check 'src/**/*{ts,tsx,scss}'",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "jest"
   }
 }
