--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "clean": "rimraf dist && mkdir -p dist",
     "lint": "prettier --check 'src/**/*{ts,tsx,scss}'",
     "lint:fix": "prettier --write 'src/**/*{ts,tsx,scss}'",
-    "typecheck": "tsc --noEmit",
-    "test": "jest"
+    "test": "jest",
+    "test:type": "tsc --noEmit"
   }
 }
