add entry point for scss

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "build": "npm run clean && run-p build:*",
     "build:ts": "tsc --project ./tsconfig.build.json",
     "build:css": "npm run prebuild:scss && postcss --use autoprefixer --map false --output ./dist/index.css ./dist/index.css",
-    "prebuild:scss": "node-sass --output-style expanded --source-map true ./src/_index.scss ./dist/index.css",
+    "prebuild:scss": "node-sass --output-style expanded --source-map true ./src/main.scss ./dist/index.css",
     "copy:sass": "cd src && find . -name '*.scss' | cpio -pdm ../plume-sass && cd -",
     "start": "run-p watch:*",
     "watch:ts": "npm run build:ts -- --watch",
