--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,6 +18,12 @@ jobs:
         uses: actions/npm@master
         with:
           args: install
+      - name: install
+        uses: actions/npm@master
+        with:
+          args: install
+      - name: build
+        run: npm run build --if-present
       - name: tag
         uses: actions/bin/filter@master
         with:
