--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     "postcss-cli": "^6.1.3",
     "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
+    "rollup": "^1.22.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-sass": "^1.2.2",
+    "rollup-plugin-typescript2": "^0.24.3",
     "sass-loader": "^7.2.0",
     "style-loader": "^1.0.0",
     "ts-jest": "^24.0.2",
