use rollup to bundle and watch

--- a/package.json
+++ b/package.json
@@ -47,14 +47,9 @@
   },
   "scripts": {
     "prepublishOnly": "run-s clean lint build",
-    "build": "run-p build:*",
-    "build:ts": "tsc --project ./tsconfig.build.json",
-    "build:css": "npm run prebuild:scss && postcss --use autoprefixer --map false --output ./dist/index.css ./dist/index.css",
-    "prebuild:scss": "node-sass --output-style expanded --source-map true ./src/main.scss ./dist/index.css",
+    "build": "rollup -c rollup.config.js",
+    "start": "rollup -c rollup.config.js --watch",
     "copy:sass": "cd src && find . -name '*.scss' | cpio -pdm ../plume-sass && cd -",
-    "start": "run-p watch:*",
-    "watch:ts": "npm run build:ts -- --watch",
-    "watch:scss": "npm run prebuild:scss -- --watch",
     "clean": "rimraf dist && mkdir -p dist",
     "lint": "prettier --check 'src/**/*{ts,tsx,scss}'",
     "lint:fix": "prettier --write 'src/**/*{ts,tsx,scss}'",
