--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 10.x
+          registry-url: 'https://registry.npmjs.org'
       - name: install and build
         run: |
           npm ci
