--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "classnames": "^2.2.6",
-    "core-js": "^3.3.4"
+    "core-js": "^3.3.4",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -19,6 +20,7 @@
     "@emotion/styled": "^10.0.15",
     "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.18",
+    "@types/lodash": "^4.14.149",
     "@types/react": "^16.9.1",
     "@types/react-dom": "^16.8.5",
     "autoprefixer": "^9.6.1",
