--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "core-js": "^3.3.4",
     "lodash": "^4.17.15"
   },
+  "engines": {
+    "node": ">=10.x"
+  },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
