--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,11 +10,11 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '16'
-      - run: 'npm i && npm run build && npm run docs:build'
+          node-version: '16.x'
+      - run: 'npm i && npm run build'
       - run: 'npm run docs:build'
       - uses: FirebaseExtended/action-hosting-deploy@v0
         if: always()
