--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,7 +15,9 @@ jobs:
         with:
           node-version: '16'
       - run: 'npm i && npm run build && npm run docs:build'
+      - run: 'npm run docs:build'
       - uses: FirebaseExtended/action-hosting-deploy@v0
+        if: always()
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PLUME_UI }}'
