--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     tags:
-      - "!*"
+      - '!*'
 
 jobs:
   release:
@@ -16,9 +16,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 10.x
-          registry-url: "https://registry.npmjs.org"
+          registry-url: 'https://registry.npmjs.org'
       - name: restore node_modules to/from cache
-        uses: actions/cache@preview
+        uses: actions/cache@v2
         with:
           path: node_modules
           key: ${{ runner.os }}-node
