--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "plume-ui",
   "description": "plume ui framework",
-  "version": "0.2.1",
+  "version": "0.2.0",
   "author": "plume-ui team",
   "main": "dist/index.js",
   "style": "dist/index.css",
@@ -11,7 +11,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "core-js": "^3.3.4",
-    "lodash": "^4.17.21",
+    "lodash": "^4.17.15",
     "react-tooltip": "^4.2.21"
   },
   "engines": {
@@ -46,7 +46,7 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^3.1.1",
-    "rollup-plugin-sass": "^1.12.20",
+    "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-typescript2": "^0.27.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.0.0",
@@ -59,8 +59,8 @@
     "unist-util-map": "^2.0.0"
   },
   "peerDependencies": {
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "remixicon": "^2.0.0"
   },
   "scripts": {
