--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "unist-util-map": "^2.0.0"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "remixicon": "^2.0.0"
   },
   "scripts": {
