--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "classnames": "^2.2.6",
     "core-js": "^3.3.4",
     "lodash": "^4.17.15",
-    "react-tooltip": "^4.2.21"
+    "react-tooltip": "^4.2.21",
+    "remixicon": "^2.0.0"
   },
   "engines": {
     "node": ">=10.x"
@@ -60,8 +61,7 @@
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0",
-    "remixicon": "^2.0.0"
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "scripts": {
     "build": "rollup -c rollup.config.js",
