--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "plume-ui",
   "description": "plume ui framework",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "plume-ui team",
   "main": "dist/index.js",
   "style": "dist/index.css",
@@ -12,8 +12,7 @@
     "classnames": "^2.2.6",
     "core-js": "^3.3.4",
     "lodash": "^4.17.15",
-    "react-tooltip": "^4.2.21",
-    "remixicon": "^2.0.0"
+    "react-tooltip": "^4.2.21"
   },
   "engines": {
     "node": ">=10.x"
@@ -41,6 +40,7 @@
     "remark-mdx": "^1.5.1",
     "remark-parse": "^8.0.0",
     "remark-stringify": "^8.0.0",
+    "remixicon": "^2.0.0",
     "rimraf": "^3.0.0",
     "rollup": "^2.0.6",
     "rollup-plugin-babel": "^4.3.3",
@@ -61,7 +61,8 @@
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "remixicon": "^2.0.0"
   },
   "scripts": {
     "build": "rollup -c rollup.config.js",
